--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: darkviolet;
+  background-color: darkgreen;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
